# xmpp-daemon

./: .gitignore  LICENSE  xmpp-daemon.cabal  xmpp-daemon.conf
client/: Main.hs
source/: Main.hs
source/XmppDaemon/: State.hs  Stun.hs
