name:                xmpp-daemon
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Philipp Balzarek
maintainer:          p.balzarek@googlemail.com
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable xmpp-daemon
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7
                     , configurator
                     , d-bus
                     , directory
                     , filepath
                     , hslogger
                     , mtl
                     , network
                     , pontarius-xmpp
                     , stunclient
                     , stunclient
                     , text
                     , xml-picklers
                     , xml-types
                     , stm
                     , containers
--                     , pontarius-xmpp-e2e
  hs-source-dirs:      source
  default-language:    Haskell2010

executable xmpp-client
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7
                     , pontarius-xmpp
--                     , pontarius-xmpp-e2e
                     , d-bus
                     , stunclient
                     , text
                     , configurator
                     , mtl
                     , directory
                     , filepath
                     , hslogger
                     , network
  hs-source-dirs:      client
  default-language:    Haskell2010
